--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.HomeFragment">
+    tools:context=".view.ui.fragments.HomeFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,31 +16,33 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/cardCornerRadius"
+                app:cardCornerRadius="@dimen/cardCornersRadius"
                 app:cardElevation="4dp"
-                android:layout_margin="15dp">
+                android:layout_margin="15dp"
+                >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_parrafo">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/banner_platzi_conf"/>
+                        android:src="@drawable/banner_platzi_conf" />
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/colorPrimary"/>
+                        android:background="@color/colorPrimary" />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/inicio_frag_tv_que_es"
                         android:textStyle="bold"
-                        android:textSize="@dimen/tamanoTitilo"
+                        android:textSize="@dimen/sizeTitulo"
                         android:textColor="@color/colorPrimaryDark"
-                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
-                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -50,30 +52,44 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/inicio_frag_tv_que_es_resp"
-                        android:textSize="@dimen/tamanoSubtitilo"
+                        android:textSize="@dimen/sizeSubtitle"
                         android:textColor="@color/colorPrimary"
-                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
-                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
-                    <!-- espacio-->
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardCornersRadius"
+                app:cardElevation="4dp"
+                android:layout_margin="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_parrafo">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/platzi_conf_2"/>
+                        android:src="@drawable/platzi_conf_2" />
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/colorPrimary"/>
+                        android:background="@color/colorPrimary" />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/inicio_frag_tv_por_que"
                         android:textStyle="bold"
-                        android:textSize="@dimen/tamanoTitilo"
+                        android:textSize="@dimen/sizeTitulo"
                         android:textColor="@color/colorPrimaryDark"
-                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
-                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -83,30 +99,44 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/inicio_frag_tv_por_que_resp"
-                        android:textSize="@dimen/tamanoSubtitilo"
+                        android:textSize="@dimen/sizeSubtitle"
                         android:textColor="@color/colorPrimary"
-                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
-                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
-                    <!-- espacio-->
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardCornersRadius"
+                app:cardElevation="4dp"
+                android:layout_margin="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_parrafo">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/platzi_conf_3"/>
+                        android:src="@drawable/platzi_conf_3" />
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/colorPrimary"/>
+                        android:background="@color/colorPrimary" />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/inicio_frag_tv_info"
                         android:textStyle="bold"
-                        android:textSize="@dimen/tamanoTitilo"
+                        android:textSize="@dimen/sizeTitulo"
                         android:textColor="@color/colorPrimaryDark"
-                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
-                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -116,16 +146,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/inicio_frag_tv_info_resp"
-                        android:textSize="@dimen/tamanoSubtitilo"
+                        android:textSize="@dimen/sizeSubtitle"
                         android:textColor="@color/colorPrimary"
-                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
-                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
-                        android:layout_marginTop="@dimen/marginHomeSubtitulo"/>
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+
                 </LinearLayout>
 
-
             </androidx.cardview.widget.CardView>
-
         </LinearLayout>
     </ScrollView>
 
