--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.SplashscreenActivity"
+    tools:context=".view.ui.activities.SplashscreenActivity"
     android:background="@color/colorPrimaryDark">
 
-
     <ImageView
-        android:id="@+id/IvLogoPlatziConf"
+        android:id="@+id/ivLogoPlatziConf"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/altoLogoPlatzi"
         android:src="@drawable/logo_platzi_conf"
@@ -17,4 +16,5 @@
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
