--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,13 @@
 <resources>
     <dimen name="altoLogoPlatzi">45dp</dimen>
     <dimen name="toolbarAlto">30dp</dimen>
-    <dimen name="cardCornerRadius">4dp</dimen>
+    <dimen name="cardCornersRadius">4dp</dimen>
     <dimen name="altoImageViewHome">150dp</dimen>
-    
-    <dimen name="tamanoTitilo">20sp</dimen>
-    <dimen name="marginHomeSubtitulo">10dp</dimen>
-    <dimen name="tamanoSubtitilo">15sp</dimen>
 
+    <dimen name="sizeTitulo">20sp</dimen>
+    <dimen name="marginHomeSubtitle">10dp</dimen>
+    <dimen name="sizeSubtitle">15sp</dimen>
+
+    <dimen name="itemScheduleTitle">30sp</dimen>
+    <dimen name="itemScheduleSubtitle">20sp</dimen>
 </resources>
