--- a/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
@@ -35,6 +35,7 @@
                         android:background="@color/colorPrimary"
                         android:alpha="0.5" />
                     <TextView
+                        android:id="@+id/tvItemScheduleTituloConferencia"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Título de la Conferencia"
