--- a/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
@@ -13,7 +13,8 @@
     </com.google.android.material.appbar.AppBarLayout>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -39,10 +40,10 @@
                         android:orientation="vertical"
                         android:background="@drawable/shape_parrafo">
                         <TextView
-                            android:id="@+id/tvDetailConferenceHour"
+                            android:id="@+id/tvDetailNombreLugar"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Lugar FranLopsConf"
+                            android:text="Lugar Platzi Conf"
                             android:textStyle="bold"
                             android:textSize="30sp"
                             android:textColor="@color/colorPrimary"
@@ -58,6 +59,7 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_pin" />
                             <TextView
+                                android:id="@+id/tvUbicationDirrecion"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Dirección"
@@ -71,6 +73,7 @@
                             android:layout_height="1dp"
                             android:background="@color/colorPrimary" />
                         <LinearLayout
+                            android:id="@+id/llSitioWeb"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -80,6 +83,7 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_phone" />
                             <TextView
+                                android:id="@+id/tvUbicationWebsite"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Teléfono Lugar"
@@ -93,6 +97,7 @@
                             android:layout_height="1dp"
                             android:background="@color/colorPrimary" />
                         <LinearLayout
+                            android:id="@+id/llTelefonoLugar"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -102,6 +107,7 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_link" />
                             <TextView
+                                android:id="@+id/tvUbicationTelefono"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Sitio Web"
