--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/banner_platzi_conf" />
+                        android:src="@drawable/banner_platzi_conf"
+                        android:layout_marginTop="1dp"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -56,17 +57,21 @@
                         android:textColor="@color/colorPrimary"
                         android:layout_marginLeft="@dimen/marginHomeSubtitle"
                         android:layout_marginRight="@dimen/marginHomeSubtitle"
-                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"
+                        android:layout_marginBottom="10dp"/>
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/cardCornersRadius"
                 app:cardElevation="4dp"
-                android:layout_margin="15dp">
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -75,7 +80,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/platzi_conf_2" />
+                        android:src="@drawable/platzi_conf_2"
+                        android:scaleType="centerCrop"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -103,18 +109,22 @@
                         android:textColor="@color/colorPrimary"
                         android:layout_marginLeft="@dimen/marginHomeSubtitle"
                         android:layout_marginRight="@dimen/marginHomeSubtitle"
-                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"
+                        android:layout_marginBottom="10dp"/>
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/cardCornersRadius"
                 app:cardElevation="4dp"
-                android:layout_margin="15dp">
-                <LinearLayout
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp">
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -122,7 +132,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/altoImageViewHome"
-                        android:src="@drawable/platzi_conf_3" />
+                        android:src="@drawable/platzi_conf_3"
+                        android:scaleType="centerCrop"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -150,7 +161,8 @@
                         android:textColor="@color/colorPrimary"
                         android:layout_marginLeft="@dimen/marginHomeSubtitle"
                         android:layout_marginRight="@dimen/marginHomeSubtitle"
-                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"
+                        android:layout_marginBottom="10dp"/>
 
                 </LinearLayout>
 
