--- a/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail_dialog.xml
@@ -13,7 +13,8 @@
     </com.google.android.material.appbar.AppBarLayout>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -45,17 +46,19 @@
                         android:gravity="center_horizontal"
                         android:layout_centerInParent="true"/>
                 </RelativeLayout>
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="4dp"
                     app:cardElevation="1dp"
-                    android:layout_margin="15dp">
+                    android:layout_margin="15dp"
+                    android:background="@drawable/shape_parrafo">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:background="@drawable/shape_parrafo">
+                        android:padding="10dp">
                         <TextView
                             android:id="@+id/tvDetailConferenceHour"
                             android:layout_width="match_parent"
