--- a/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
@@ -49,6 +49,10 @@
                             android:textColor="@color/colorPrimary"
                             android:gravity="center_horizontal"
                             android:layout_margin="5dp" />
+                        <view
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/colorPrimary"/>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
